--- a/src/main/resources/templates/static/aliquota.html
+++ b/src/main/resources/templates/static/aliquota.html
@@ -24,18 +24,18 @@
 		<div id="form" class="form m-3 row">
 
 			<label class="form-label">Ano-Mês</label>
-			<input class="form-control" accept="text" required placeholder="Formato Ano-Mês" id="anoMes">
+			<input class="form-control" accept="text" required="true"  placeholder="Formato Ano-Mês" id="anoMes">
 
-			<div id="faixaAliquota" class="m-3 p-3 border border-info rounded">
+			<div id="faixaAliquota" class="faixa m-3 p-3 border border-info rounded">
 
 				<label class="form-label">Valor Mínimo</label>
-				<input class="form-control" accept="text" required placeholder="Valor Minimo" id="valorMinimo">
+				<input class="form-control" accept="text" required="true"  placeholder="Valor Minimo" id="valorMinimo">
 
 				<label class="form-label">Valor Máximo</label>
-				<input class="form-control" accept="text" required placeholder="Valor Máximo" id="valorMaximo">
+				<input class="form-control" accept="text" required="true"  placeholder="Valor Máximo" id="valorMaximo">
 
 				<label class="form-label">Alíquota %(0-100) - pressione Enter para adicionar outra faixa automaticamente</label>
-				<input class="form-control" accept="text" required placeholder="Alíquota Ex: 7.5" id="aliquota">
+				<input class="form-control" accept="text" required="true" placeholder="Alíquota Ex: 7.5" id="aliquota">
 			</div>
 
 		</div>
