--- a/src/main/resources/templates/static/aliquota.html
+++ b/src/main/resources/templates/static/aliquota.html
@@ -17,33 +17,65 @@
 		<a class="btn btn-lg btn-primary" href="/page/aliquota"> Aliquotas</a>
 	</nav>
 
-<div class="container">
+<div class="d-flex flex-row">
 	
 
-	<div class="mb-3 col-6">
+	<div class="mb-3 col-8">
 		<div id="form" class="form m-3 row">
 
 			<label class="form-label">Ano-Mês</label>
 			<input class="form-control" accept="text" required="true"  placeholder="Formato Ano-Mês" id="anoMes">
 
-			<div id="faixaAliquota" class="faixa m-3 p-3 border border-info rounded">
+			<div id="faixaAliquota1" class="faixa m-3 p-3 border border-info rounded">
 
 				<label class="form-label">Valor Mínimo</label>
-				<input class="form-control" accept="text" required="true"  placeholder="Valor Minimo" id="valorMinimo">
+				<input class="form-control" accept="text" required="true"  placeholder="Valor Minimo" id="valorMinimo1">
 
 				<label class="form-label">Valor Máximo</label>
-				<input class="form-control" accept="text" required="true"  placeholder="Valor Máximo" id="valorMaximo">
+				<input class="form-control" accept="text" required="true"  placeholder="Valor Máximo" id="valorMaximo1">
 
 				<label class="form-label">Alíquota %(0-100) - pressione Enter para adicionar outra faixa automaticamente</label>
-				<input class="form-control" accept="text" required="true" placeholder="Alíquota Ex: 7.5" id="aliquota">
+				<input class="form-control" accept="text" required="true" placeholder="Alíquota Ex: 7.5" id="aliquota1">
+			</div>
+			<div id="faixaAliquota2" class="faixa m-3 p-3 border border-info rounded">
+
+				<label class="form-label">Valor Mínimo</label>
+				<input class="form-control" accept="text" required="true"  placeholder="Valor Minimo" id="valorMinimo2">
+
+				<label class="form-label">Valor Máximo</label>
+				<input class="form-control" accept="text" required="true"  placeholder="Valor Máximo" id="valorMaximo2">
+
+				<label class="form-label">Alíquota %(0-100) - pressione Enter para adicionar outra faixa automaticamente</label>
+				<input class="form-control" accept="text" required="true" placeholder="Alíquota Ex: 7.5" id="aliquota2">
+			</div>
+			<div id="faixaAliquota3" class="faixa m-3 p-3 border border-info rounded">
+
+				<label class="form-label">Valor Mínimo</label>
+				<input class="form-control" accept="text" required="true"  placeholder="Valor Minimo" id="valorMinimo3">
+
+				<label class="form-label">Valor Máximo</label>
+				<input class="form-control" accept="text" required="true"  placeholder="Valor Máximo" id="valorMaximo3">
+
+				<label class="form-label">Alíquota %(0-100) - pressione Enter para adicionar outra faixa automaticamente</label>
+				<input class="form-control" accept="text" required="true" placeholder="Alíquota Ex: 7.5" id="aliquota3">
+			</div>
+			<div id="faixaAliquota4" class="faixa m-3 p-3 border border-info rounded">
+
+				<label class="form-label">Valor Mínimo</label>
+				<input class="form-control" accept="text" required="true"  placeholder="Valor Minimo" id="valorMinimo4">
+
+				<label class="form-label">Valor Máximo</label>
+				<input class="form-control" accept="text" required="true"  placeholder="Valor Máximo" id="valorMaximo4">
+
+				<label class="form-label">Alíquota %(0-100) - pressione Enter para adicionar outra faixa automaticamente</label>
+				<input class="form-control" accept="text" required="true" placeholder="Alíquota Ex: 7.5" id="aliquota4">
 			</div>
 
 		</div>
 		<button class="btn btn-lg btn-success" onclick="enviar()">Enviar</button>
 
 	</div>
-		<div class="response mb-3 col-4">
-			<h1>testes</h1>
+		<div class="response m-3 col-4 border border-secondary rounded" id="response">
 		</div>
 
 </div>
