--- a/bin/src/main/resources/templates/static/salarios.html
+++ b/bin/src/main/resources/templates/static/salarios.html
@@ -19,10 +19,8 @@
 
 <div class="d-flex flex-row">
 	
-	<div class="m-3 col-4 border border-secondary rounded d-flex flex-column" id="contribuintes">
-		</div>
 
-	<div class="mb-3 col-4 border border-secondary rounded">
+	<div class="mb-3 col-4">
 		<div id="form" class="form m-3 row">
 
 			<label class="form-label">Ano-Mês</label>
@@ -77,7 +75,6 @@
 		<button class="btn btn-lg btn-success" onclick="enviar()">Enviar</button>
 
 	</div>
-		
 		<div class="response m-3 col-4 border border-secondary rounded" id="response">
 		</div>
 
@@ -87,7 +84,7 @@
 
 
 	</script>
-	<script src="/static/salarios.js"></script>
+	<script src="/static/aliquota.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
