iniciado formulário salario contribuicao

--- a/src/main/resources/templates/static/salarios.html
+++ b/src/main/resources/templates/static/salarios.html
@@ -27,54 +27,14 @@
 
 			<label class="form-label">Ano-Mês</label>
 			<input class="form-control" accept="text" required="true"  placeholder="Formato Ano-Mês" id="anoMes">
+			<label class="form-label">Componente salário - INSS</label>
+			<input class="form-control" accept="text" required="true"  placeholder="Valor Minimo" id="valorMinimo1">
+			<label class="form-label">Descrição (opcional) - pressione Enter para adicionar outra faixa automaticamente</label>
+			<input class="form-control" accept="text" required="true" placeholder="Descrição (opcional)" id="descricao">
 
-			<div id="faixaAliquota1" class="faixa m-3 p-3 border border-info rounded">
-
-				<label class="form-label">Valor Mínimo</label>
-				<input class="form-control" accept="text" required="true"  placeholder="Valor Minimo" id="valorMinimo1">
-
-				<label class="form-label">Valor Máximo</label>
-				<input class="form-control" accept="text" required="true"  placeholder="Valor Máximo" id="valorMaximo1">
-
-				<label class="form-label">Alíquota %(0-100) - pressione Enter para adicionar outra faixa automaticamente</label>
-				<input class="form-control" accept="text" required="true" placeholder="Alíquota Ex: 7.5" id="aliquota1">
-			</div>
-			<div id="faixaAliquota2" class="faixa m-3 p-3 border border-info rounded">
-
-				<label class="form-label">Valor Mínimo</label>
-				<input class="form-control" accept="text" required="true"  placeholder="Valor Minimo" id="valorMinimo2">
-
-				<label class="form-label">Valor Máximo</label>
-				<input class="form-control" accept="text" required="true"  placeholder="Valor Máximo" id="valorMaximo2">
-
-				<label class="form-label">Alíquota %(0-100) - pressione Enter para adicionar outra faixa automaticamente</label>
-				<input class="form-control" accept="text" required="true" placeholder="Alíquota Ex: 7.5" id="aliquota2">
-			</div>
-			<div id="faixaAliquota3" class="faixa m-3 p-3 border border-info rounded">
-
-				<label class="form-label">Valor Mínimo</label>
-				<input class="form-control" accept="text" required="true"  placeholder="Valor Minimo" id="valorMinimo3">
-
-				<label class="form-label">Valor Máximo</label>
-				<input class="form-control" accept="text" required="true"  placeholder="Valor Máximo" id="valorMaximo3">
-
-				<label class="form-label">Alíquota %(0-100) - pressione Enter para adicionar outra faixa automaticamente</label>
-				<input class="form-control" accept="text" required="true" placeholder="Alíquota Ex: 7.5" id="aliquota3">
-			</div>
-			<div id="faixaAliquota4" class="faixa m-3 p-3 border border-info rounded">
-
-				<label class="form-label">Valor Mínimo</label>
-				<input class="form-control" accept="text" required="true"  placeholder="Valor Minimo" id="valorMinimo4">
-
-				<label class="form-label">Valor Máximo</label>
-				<input class="form-control" accept="text" required="true"  placeholder="Valor Máximo" id="valorMaximo4">
-
-				<label class="form-label">Alíquota %(0-100) - pressione Enter para adicionar outra faixa automaticamente</label>
-				<input class="form-control" accept="text" required="true" placeholder="Alíquota Ex: 7.5" id="aliquota4">
-			</div>
 
 		</div>
-		<button class="btn btn-lg btn-success" onclick="enviar()">Enviar</button>
+		<button class="btn btn-lg btn-success m-3" onclick="enviar()">Enviar</button>
 
 	</div>
 		
