--- a/src/main/resources/templates/static/aliquota.html
+++ b/src/main/resources/templates/static/aliquota.html
@@ -72,7 +72,7 @@
 			</div>
 
 		</div>
-		<button class="btn btn-lg btn-success" onclick="enviar()">Enviar</button>
+		<button class="btn btn-lg btn-success m-3" onclick="enviar()">Enviar</button>
 
 	</div>
 		<div class="response m-3 col-4 border border-secondary rounded" id="response">
