--- a/src/main/resources/templates/static/contribuinte.html
+++ b/src/main/resources/templates/static/contribuinte.html
@@ -25,7 +25,7 @@
 			<label class="form-label">CPF</label>
 			<input class="form-control" type="text" placeholder="CPF" id="cpf">
 		</form>
-		<button class="btn btn-lg btn-success" onclick="enviar()">Enviar</button>
+		<button class="btn btn-lg btn-success m-3" onclick="enviar()">Enviar</button>
 	</div>
 	<script src="/static/contribuinte.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
