--- a/src/main/resources/templates/static/salarios.html
+++ b/src/main/resources/templates/static/salarios.html
@@ -26,15 +26,20 @@
 		<div id="form" class="form m-3 row">
 
 			<label class="form-label">Ano-Mês</label>
-			<input class="form-control" accept="text" required="true"  placeholder="Formato Ano-Mês" id="anoMes">
-			<label class="form-label">Componente salário - INSS</label>
-			<input class="form-control" accept="text" required="true"  placeholder="Valor Minimo" id="valorMinimo1">
-			<label class="form-label">Descrição (opcional) - pressione Enter para adicionar outra faixa automaticamente</label>
-			<input class="form-control" accept="text" required="true" placeholder="Descrição (opcional)" id="descricao">
+			<input class="form-control" accept="text" required="true"  placeholder="Ex. 2015-02" id="anoMes">
+			<div class="componentes m-1 border border-secondary rounded" id="componente">
+
+				<label class="form-label">Componente salário - INSS</label>
+				<input class="inputSalario form-control" onkeydown='addComponentes(this)' accept="text" required="true"  placeholder="Digite o valor" id="componenteSalario" >
+				<label class="form-label">Descrição (opcional) - Enter para outro componente </label>
+				<input class="inputDescricao form-control" onkeydown='addComponentes(this)' accept="text" required="true" placeholder="Descrição (opcional) Ex. Horas Extraordinárias" id="descricao">
+
+			</div>
 
 
 		</div>
 		<button class="btn btn-lg btn-success m-3" onclick="enviar()">Enviar</button>
+		<button  class="btn btn-lg btn-danger m-3" onclick="limpar()" >Limpar</button>
 
 	</div>
 		
