melhorias insercao salarios contribuinte e criacao classe ComponentesIncidencia

--- a/src/main/resources/templates/static/contribuinte.html
+++ b/src/main/resources/templates/static/contribuinte.html
@@ -12,8 +12,8 @@
 
 <body>
 	<nav class="d-flex justify-content-around p-3 mb-2 bg-light text-dark">
-
 		<a class="btn btn-lg btn-primary" href="/">Home </a>
+		<a class="btn btn-lg btn-primary" href="/page/contribuinte">Contribuinte </a>
 		<a class="btn btn-lg btn-primary"  href="/page/salarios-contribuicao">Salários de Contribuição </a>
 		<a class="btn btn-lg btn-primary" href="/page/aliquota"> Aliquotas</a>
 	</nav>
