--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,13 +11,12 @@
 </head>
 	
 	<body>
-		<nav class="d-flex justify-content-around p-3 mb-2 bg-light text-dark">
-			
-		<a class="btn btn-lg btn-primary"  href="/page/contribuinte">Contribuinte </a>
+	<nav class="d-flex justify-content-around p-3 mb-2 bg-light text-dark">
+		<a class="btn btn-lg btn-primary" href="/">Home </a>
+		<a class="btn btn-lg btn-primary" href="/page/contribuinte">Contribuinte </a>
 		<a class="btn btn-lg btn-primary"  href="/page/salarios-contribuicao">Salários de Contribuição </a>
-
-			<a class="btn btn-lg btn-primary" href="/page/aliquota"> Aliquotas</a>
-		</nav>
+		<a class="btn btn-lg btn-primary" href="/page/aliquota"> Aliquotas</a>
+	</nav>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
