--- a/src/main/resources/templates/static/aliquota.html
+++ b/src/main/resources/templates/static/aliquota.html
@@ -15,6 +15,7 @@
 		<a class="btn btn-lg btn-primary" href="/">Home </a>
 		<a class="btn btn-lg btn-primary" href="/page/contribuinte">Contribuinte </a>
 		<a class="btn btn-lg btn-primary"  href="/page/salarios-contribuicao">Salários de Contribuição </a>
+		<a class="btn btn-lg btn-primary" href="/page/aliquota"> Aliquotas</a>
 	</nav>
 
 <div class="d-flex flex-row">
