--- a/src/main/resources/templates/static/salarios.html
+++ b/src/main/resources/templates/static/salarios.html
@@ -3,60 +3,80 @@
 <html lang="pt-br">
 
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+	crossorigin="anonymous">
 </head>
 
 <body>
 
 	<nav class="d-flex justify-content-around p-3 mb-2 bg-light text-dark">
-		<a class="btn btn-lg btn-primary" href="/">Home </a>
-		<a class="btn btn-lg btn-primary" href="/page/contribuinte">Contribuinte </a>
-		<a class="btn btn-lg btn-primary"  href="/page/salarios-contribuicao">Salários de Contribuição </a>
-		<a class="btn btn-lg btn-primary" href="/page/aliquota"> Aliquotas</a>
+		<a class="btn btn-lg btn-primary" href="/">Home </a> <a
+			class="btn btn-lg btn-primary" href="/page/contribuinte">Contribuinte
+		</a> <a class="btn btn-lg btn-primary" href="/page/salarios-contribuicao">Salários
+			de Contribuição </a> <a class="btn btn-lg btn-primary"
+			href="/page/aliquota"> Aliquotas</a>
 	</nav>
 
-<div class="d-flex flex-row">
-	
-	<div class="m-2 col-4 border border-secondary rounded d-flex flex-column" id="contribuintes">
-		</div>
+	<div class="d-flex flex-row">
 
-	<div class="m-2 col-4 border border-secondary rounded">
-		
-		<div id="form" class="form m-3 row">
+		<div
+			class="m-2 col-4 border border-secondary rounded d-flex flex-column"
+			id="contribuintes"></div>
 
-			<label class="form-label">Ano-Mês</label>
-			<input class="form-control" accept="text" required="true"  placeholder="Ex. 2015-02" id="anoMes">
-			
-			<div class="componentes m-1 mt-2 border border-info rounded" id="componente">
+		<div class="m-2 col-4 border border-secondary rounded">
 
-				<label class="form-label">Componente salário - INSS</label>
-				<input class="inputSalario form-control" onkeydown='addComponentes(this)' accept="text" required="true"  placeholder="Digite o valor" id="componenteSalario" >
-				<label class="form-label">Descrição (opcional) - Enter para outro componente </label>
-				<input class="inputDescricao form-control" onkeydown='addComponentes(this)' accept="text" required="true" placeholder="Descrição (opcional) Ex. Horas Extraordinárias" id="descricao">
+			<div id="form" class="form m-3 row">
+
+				<label class="form-label">Ano-Mês</label> <input
+					class="form-control" accept="text" required="true"
+					placeholder="Ex. 2015-02" id="anoMes">
+
+				<div class="componentes m-1 mt-2 border border-info rounded"
+					id="componente">
+
+					<label class="form-label">Componente salário - INSS</label> 
+					<input
+						class="inputSalario form-control" 
+						accept="text" required="true" placeholder="Digite o valor"
+						id="componenteSalario"> 
+					<label class="form-label">Descrição (opcional) - Enter para outro componente </label> 
+					<input
+						class="inputDescricao form-control"
+						 accept="text" required="true"
+						placeholder="Descrição (opcional) Ex. Horas Extraordinárias"
+						id="descricao">
+					<button class="adicionarOutro btn btn-lg btn-light mt-1">
+						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+							fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+  					<path
+								d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z" />
+  					<path
+								d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
+					</svg>Clique para adicionar outro item</button>
+				</div>
+
 
 			</div>
-
+			<button class="btn btn-lg btn-success m-3" onclick="enviar()">Enviar</button>
+			<button class="btn btn-lg btn-danger m-3" onclick="limpar()">Limpar</button>
 
 		</div>
-		<button class="btn btn-lg btn-success m-3" onclick="enviar()">Enviar</button>
-		<button  class="btn btn-lg btn-danger m-3" onclick="limpar()" >Limpar</button>
+
+		<div class="response m-2 col-4 border border-secondary rounded"
+			id="response"></div>
 
 	</div>
-		
-		<div class="response m-2 col-4 border border-secondary rounded" id="response">
-		</div>
-
-</div>
 	<script>
-
-
-
+		
 	</script>
 	<script src="/static/salarios.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+	<script
+		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
 		crossorigin="anonymous"></script>
 </body>
