--- a/src/main/resources/templates/salarios.html
+++ b/src/main/resources/templates/salarios.html
@@ -5,11 +5,8 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link
-	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-	rel="stylesheet"
-	integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-	crossorigin="anonymous">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		  integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 </head>
 
 <body>
@@ -32,24 +29,17 @@
 
 			<div id="form" class="form m-3 row">
 
-				<label class="form-label">Ano-Mês</label> <input
-					class="form-control" accept="text" required="true"
-					placeholder="Ex. 2015-02" id="anoMes">
+				<label class="form-label" for="anoMes">Ano-Mês
+					<input class="form-control" accept="text" required="true"placeholder="Ex. 2015-02" id="anoMes">
+				</label>
 
 				<div class="componentes m-1 mt-2 border border-info rounded"
 					id="componente">
 
-					<label class="form-label">Componente salário - INSS</label> 
-					<input
-						class="inputSalario form-control" 
-						accept="text" required="true" placeholder="Digite o valor"
-						id="componenteSalario"> 
-					<label class="form-label">Descrição (opcional) - Enter para outro componente </label> 
-					<input
-						class="inputDescricao form-control"
-						 accept="text" required="true"
-						placeholder="Descrição (opcional) Ex. Horas Extraordinárias"
-						id="descricao">
+					<label class="form-label" for="componenteSalario">Componente salário - INSS</label>
+					<input class="inputSalario form-control" accept="text" required="true" placeholder="Digite o valor"	id="componenteSalario">
+					<label class="form-label" for="descricao">Descrição (opcional) - Enter para outro componente </label>
+					<input	class="inputDescricao form-control"	 accept="text" required="true"	placeholder="Descrição (opcional) Ex. Horas Extraordinárias" id="descricao">
 					<button class="adicionarOutro btn btn-lg btn-light mt-1">
 						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
 							fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
@@ -71,14 +61,11 @@
 			id="response"></div>
 
 	</div>
-	<script>
-		
-	</script>
-	<script src="/static/salarios.js"></script>
-	<script
-		src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-		crossorigin="anonymous"></script>
+
+<!--	<script src="/static/salarios.js"></script>-->
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+			crossorigin="anonymous" defer></script>
 </body>
 
 </html>
